--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="Samantha Lin - Resume">
+  <meta name="author" content="862300417">
 
-  <title>John Doe - Business Administration</title>
+  <title>Samantha Lin - Business Administration</title>
+  
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +28,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Samantha Lin</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/samanthalin.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +59,29 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Samantha Lin
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+          <div class="subheading mb-5">Pre-Business</div>
+        <p class="lead mb-4">A high school graduate currently studying at University of California, Riverside pursuing a BA in Business Administration. Also a retail associate with over a year of experience presenting in-store efficiency and skilled in processing and replenishing merchandise and inventory management. Provided superior customer service, increased average sales and answered any inquiries directed towards store products. <br><br>
 
-        Enter bio here<br><br>
+        With prior experience in retail and food services, I have learned many skills that can be applied to future jobs. My experience in different areas of careers allows me to understand the importance of each job and how it all connects to each other. Ability to communicate efficiently with customers to satisfy their needs and make their experience at the store the best. <br><br>
 
-        Enter bio here
+        Have experience with handling money, restocking merchandise, and helping customers locate products. History of keeping work areas clean, neat, and professionally organized. Amazing listening skills combined with attentive and detail-oriented nature. Skilled at loss prevention, recordkeeping, and leadership. Always working to enhance revenue and boost customer satisfaction. <br><br>
+        
+        Skilled in solving complicated issues and making proactive operational changes. Driven to maintain service standards by supporting staff in effective handling of service issues and customer communications. Lots of experience with inventory management and merchandising experience. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://linkedin.com/in/samantha-lin-8026a619b/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/ssamanthalin">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/sammyxpanda">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:slin196@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,43 +96,42 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Closing Expert</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://target.com">Target</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Ensure that customers have all their questions answered<br> 
+              • Process sales transactions<br>
+              • Ensure the store is clean and organized for the next day<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">October 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Barista/Server</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://tenrensteatime.com">Ten Ren's Tea Time</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Prepare hot and cold drinks to customers’ likings<br>
+              • Communicate with customers to ensure quality service is provided<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">May 2020 - February 2021</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Sales Associate</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.claires.com">Claire's</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Customer Service Representative<br>
+            • Provide excellent customer service to all customers<br>
+            • Assist customers with anyquestions about products<br>
 
           </p>
           </div>
@@ -152,33 +155,22 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
             <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div>Majoring in Pre-Business</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2021 - June 2025</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
+          <div class="resume-content">
+            <h3 class="mb-0">Arcadia High School</h3>
+            <div class="subheading mb-3">High School</div>
+            <div>High School Graduate</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2017 - June 2021</span>
           </div>
         </div>
 
@@ -191,7 +183,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/work1.jpg" width="500px">
+            <img src="img/work2.jpg" width="500px"><br>
+            <img src="img/work3.jpg" width="500px">
+            <img src="img/work4.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +194,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Samantha Lin</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
